# GameEngine

./: CMakeLists.txt  Makefile  README.md  imgui.ini
src/: main.cpp
src/Core/: Application.cpp  Application.h
src/Core/Commands/: SceneCommand.h  SceneCommandHistory.cpp  SceneCommandHistory.h  SceneCommandParser.cpp  SceneCommandParser.h
src/Core/ECS/: Components.h  Scene.cpp  Scene.h
src/Core/Renderer/: Camera.cpp  Camera.h  shader.cpp  shader.h
src/Core/Serialization/: SceneSerializer.cpp  SceneSerializer.h
src/Generative/: ShaderGenerator.cpp  ShaderGenerator.h
